--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
   "devDependencies": {
     "@hapi/hapi": "^21.3.12",
     "nodemon": "^3.1.9"
+  },
+  "dependencies": {
+    "nanoid": "^3.3.8"
   }
 }
